--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: Arial, sans-serif;
@@ -23,6 +27,67 @@ body {
         cursor: not-allowed;
         background-color: #aaa;
       }
+    }
+  }
+
+  .flex {
+    display: flex;
+    .row {
+      flex-direction: row;
+    }
+    .column {
+      flex-direction: column;
+    }
+    .flex-wrap {
+      flex-wrap: wrap;
+    }
+    .flex-wrap-reverse {
+      flex-wrap: wrap-reverse;
+    }
+    .flex-nowrap {
+      flex-wrap: nowrap;
+    }
+    // justify-content
+    .justify-normal {
+      justify-content: normal;
+    }
+    .justify-start {
+      justify-content: flex-start;
+    }
+    .justify-end {
+      justify-content: flex-end;
+    }
+    .justify-center {
+      justify-content: center;
+    }
+    .justify-between {
+      justify-content: space-between;
+    }
+    .justify-around {
+      justify-content: space-around;
+    }
+    .justify-evenly {
+      justify-content: space-evenly;
+    }
+    .justify-stretch {
+      justify-content: stretch;
+    }
+
+    // align items
+    .items-start {
+      align-items: flex-start;
+    }
+    .items-end {
+      align-items: flex-end;
+    }
+    .items-center {
+      align-items: center;
+    }
+    .items-baseline {
+      align-items: baseline;
+    }
+    .items-stretch {
+      align-items: stretch;
     }
   }
 }
