--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,7 +27,8 @@ body {
       &:hover {
         background-color: #4a5f78;
       }
-      &.disabled {
+      &.disabled,
+      &:disabled {
         cursor: not-allowed;
         pointer-events: none;
         background-color: #aaa;
@@ -44,61 +45,61 @@ body {
 
   .flex {
     display: flex;
-    .row {
+    &.row {
       flex-direction: row;
     }
-    .column {
+    &.column {
       flex-direction: column;
     }
-    .flex-wrap {
+    &.flex-wrap {
       flex-wrap: wrap;
     }
-    .flex-wrap-reverse {
+    &.flex-wrap-reverse {
       flex-wrap: wrap-reverse;
     }
-    .flex-nowrap {
+    &.flex-nowrap {
       flex-wrap: nowrap;
     }
     // justify-content
-    .justify-normal {
+    &.justify-normal {
       justify-content: normal;
     }
-    .justify-start {
+    &.justify-start {
       justify-content: flex-start;
     }
-    .justify-end {
+    &.justify-end {
       justify-content: flex-end;
     }
-    .justify-center {
+    &.justify-center {
       justify-content: center;
     }
-    .justify-between {
+    &.justify-between {
       justify-content: space-between;
     }
-    .justify-around {
+    &.justify-around {
       justify-content: space-around;
     }
-    .justify-evenly {
+    &.justify-evenly {
       justify-content: space-evenly;
     }
-    .justify-stretch {
+    &.justify-stretch {
       justify-content: stretch;
     }
 
     // align items
-    .items-start {
+    &.items-start {
       align-items: flex-start;
     }
-    .items-end {
+    &.items-end {
       align-items: flex-end;
     }
-    .items-center {
+    &.items-center {
       align-items: center;
     }
-    .items-baseline {
+    &.items-baseline {
       align-items: baseline;
     }
-    .items-stretch {
+    &.items-stretch {
       align-items: stretch;
     }
   }
