--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,7 +5,7 @@
 body {
   margin: 0;
   background: #f5f7f9;
-  font-family: Arial, sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   .App {
