--- a/src/pages/404/index.module.scss
+++ b/src/pages/404/index.module.scss
@@ -1,10 +1,15 @@
 .errorPage {
   margin: auto;
   .errorContainer {
-    min-width: 720px;
     margin-bottom: 20px;
     .description {
       margin-bottom: 40px;
+    }
+    @media only screen and (min-width: 560px) {
+      min-width: 510px;
+    }
+    @media only screen and (min-width: 760px) {
+      min-width: 720px;
     }
   }
 }
